# oh-my-multica

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  LICENSE  README.md  README.zh-CN.md  agents  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: metadata-schema-optimization.md  omac-cli-design.md  smoke-test-plan.md
docs/assets/: oh-my-multica-demo.cast
docs/case-studies/: building-v1-on-multica.md  building-v1-on-multica.zh-CN.md  webhook-inbox-end-to-end.md  webhook-inbox-end-to-end.zh-CN.md
docs/demo/: README.md  demo-manifest.yaml  run-demo.sh
docs/diagrams/: oh-my-multica-harness-engineering.html  oh-my-multica-harness-quadrants.drawio  oh-my-multica-overall-architecture.html  v1-foundation-delivery-record.html
docs/launch/: README.md  chinese-communities.zh-CN.md  faq.md  github-discussions.md  multica.md  product-hunt.md  show-hn.md
docs/releases/: 1.0.0.md
scripts/: install.sh
tests/: conftest.py  test_agent_templates.py  test_cli.py  test_cli_dag.py  test_cli_node.py  test_cli_plan.py  test_cli_work.py  test_delivery_acceptance.py  test_delivery_ci.py  test_delivery_merge.py  test_dispatch.py  test_e2e_p1.py  test_e2e_p4_delivery.py  test_engines_mock.py  test_engines_multica.py  test_events_run_task.py  test_events_tick.py  test_evidence.py  test_gitsync.py  test_graph.py  test_guide.py  test_i18n.py  test_increment.py  test_init.py  test_lint.py  test_live_p2.py  test_logsetup.py  test_loop.py  test_manifest.py  test_retry_config.py  test_taskmeta.py  test_tasks.py  test_web_api.py  test_web_static.py
(+428 files in other folders)
