[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omac"
version = "1.0.0"
description = "oh-my-agent-cluster: 确定性 CLI 驱动的多 Agent 并行开发编排(Loop 驱动 Agent)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "structlog>=24",
]

[project.urls]
Homepage = "https://github.com/xiaohei-info/oh-my-agent-cluster"

[project.scripts]
omac = "omac.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"omac.guide" = ["*.md"]
"omac.web.static" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: tests that hit a real platform (Multica/GitHub). Skipped by default in CI; run locally with `-m live`.",
    "e2e: CLI 子进程级端到端验收(mock 引擎)。稳定回归护栏,无 sleep 竞态(mock delay=0)。",
]
